--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,7 +5,6 @@
   }
   
   .add-file {
-    position: absolute;
     top: 10px;
     left: 10px;
     border-radius: 50%;
@@ -20,7 +19,7 @@
   
   textarea {
     width: 100%;
-    padding-left: 50px; /* space for + icon */
+    padding-left: 50px; 
     padding-top: 10px;
     box-sizing: border-box;
     resize: none;
